# InlineHook-fix

./: README.md
myihk/: build.gradle
myihk/src/main/jni/: Application.mk  CMakeLists.txt
myihk/src/main/jni/arm/model/: iModel.cpp
myihk/src/main/jni/arm64/: CMakeLists.txt
myihk/src/main/jni/arm64/asm/: dump_neon.s  dump_neon_just_ret.s  dump_neon_with_ret.s  replace_neon.s
myihk/src/main/jni/arm64/model/: CMakeLists.txt  iModel.cpp
myihk/src/main/jni/arm64/src/: CMakeLists.txt
myihk/src/main/jni/arm64/src/dump/: CMakeLists.txt
myihk/src/main/jni/arm64/src/dump_just_ret/: CMakeLists.txt
myihk/src/main/jni/arm64/src/dump_with_ret/: CMakeLists.txt
myihk/src/main/jni/arm64/src/replace/: CMakeLists.txt
myihk/src/main/jni/include/: mhk.h
myihk/src/main/jni/test/: CMakeLists.txt  main.cpp
